# ecommerce

./: .dockerignore  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  docker-compose.yml  mypy.ini  pyproject.toml
.github/workflows/: checker.yml  testing.yml
ecommerce/: env_handler.py  env_settings.py  settings.py  site_urls.py  urls.py
ecommerce/clients/: admin.py  apps.py  models.py  services.py
ecommerce/core/: admin.py  context_processors.py  exceptions.py  models.py  readers.py  services.py
ecommerce/order/: admin.py  exceptions.py  mixins.py  models.py
ecommerce/products/: admin.py  models.py  translation.py
ecommerce/social_auth/: apps.py
ecommerce/utils/: models.py
settings/: base.yml
states/: states.json
states/cities/: cities_1.json  cities_10.json  cities_11.json  cities_12.json  cities_13.json  cities_14.json  cities_15.json  cities_16.json  cities_17.json  cities_18.json  cities_19.json  cities_2.json  cities_20.json  cities_21.json  cities_22.json  cities_23.json  cities_24.json  cities_25.json  cities_26.json  cities_27.json  cities_28.json  cities_29.json  cities_3.json  cities_30.json  cities_31.json  cities_32.json  cities_4.json  cities_5.json  cities_6.json  cities_7.json  cities_8.json  cities_9.json
staticfiles/: staticfiles.json
templates/account/: base.html  email_confirm.html  login.html  password_reset.html  password_reset_done.html  password_reset_from_key.html  password_reset_from_key_done.html  signup.html
templates/core/: base.html  frontpage.html  not-found.html
templates/products/: list.html
(+173 files in other folders)
