[tool.poetry]
name = "ecommerce"
version = "0.1.0"
description = ""
authors = ["Gustavo Lozada <gu.lozada9@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.6"
python-decouple = "^3.6"
dj-database-url = "^0.5.0"
psycopg2 = "^2.9.3"
gunicorn = "^20.1.0"
whitenoise = "^6.2.0"
django-safedelete = "^1.2.2"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
