[tool.poetry]
name = "ecommerce"
version = "0.1.0"
description = ""
authors = ["Gustavo Lozada <gu.lozada9@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.6"
python-decouple = "^3.6"
dj-database-url = "^0.5.0"
psycopg2 = "^2.9.3"
gunicorn = "^20.1.0"
whitenoise = "^6.2.0"
django-safedelete = "^1.2.2"
Pillow = "^9.2.0"
django-thumbnails = "^0.7.0"
django-extensions = "^3.2.0"
Faker = "^13.15.1"
mypy = "^0.971"
PyYAML = "^6.0"
types-PyYAML = "^6.0.11"
django-allauth = "^0.51.0"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
mypy = "^0.971"
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
